# hangman_solver

./: .gitignore  Cargo.toml  benchmark.sh  build.rs  build.sh  build_rust_wheels.py  cli.py  clippy  compress_zip.py  pyproject.toml  rustfmt.toml
.github/workflows/: check.yml  test.yml  website.yml
hangman_solver/: __init__.pyi
python/hangman_solver/: __init__.py  __init__.pyi
src/: lib.rs  main.rs
src/language/: mod.rs  word_sequence.rs
src/solver/: ascii_char_iterator.rs  char_collection.rs  char_trait.rs  char_utils.rs  generic_char_collection.rs  hangman_result.rs  infallible_char_collection.rs  mod.rs  pattern.rs  pattern_trait.rs  solver.rs
test_inputs/: _-e.output  _-e.txt  _.output  _.txt  asozial.output  asozial.txt  biergarten.output  biergarten.txt  ersatzteilplattform.output  ersatzteilplattform.txt  galgenmaennchen.txt  wohnungsbaukaufmann.output  wohnungsbaukaufmann.txt  zweitwohnsitz.output  zweitwohnsitz.txt  zwillingsparadoxon.output  zwillingsparadoxon.txt
test_inputs/de/: _-e.output  _.output  asozial.output  asozial.txt  biergarten.output  ersatzteilplattform.output  galgenmaennchen.output  galgenmaennchen.txt  gürteltier.output  wohnungsbaukaufmann.output  zuckersüß.output  zuckersüß.txt  zweitwohnsitz.output  zwillingsparadoxon.output  zwillingsparadoxon.txt
test_inputs/de_basic/: _-e.output  _.output  asozial.output  biergarten.output  ersatzteilplattform.output  galgenmaennchen.output  gürteltier.output  wohnungsbaukaufmann.output  zuckersüß.output  zweitwohnsitz.output  zwillingsparadoxon.output
test_inputs/de_basic_umlauts/: _-e.output  _.output  asozial.output  biergarten.output  ersatzteilplattform.output  galgenmaennchen.output  gürteltier.output  wohnungsbaukaufmann.output  zuckersüß.output  zweitwohnsitz.output  zwillingsparadoxon.output
test_inputs/de_umlauts/: _-e.output  _.output  asozial.output  biergarten.output  ersatzteilplattform.output  galgenmaennchen.output  gürteltier.output  gürteltier.txt  wohnungsbaukaufmann.output  wohnungsbaukaufmann.txt  zuckersüß.output  zweitwohnsitz.output  zweitwohnsitz.txt  zwillingsparadoxon.output
test_inputs/en/: english.output  english.txt  epidemic.output  epidemic.txt
web/: index.html  run.js
words/: LICENSE  de_basic.txt  en.txt
