[package]
name = "hangman_solver"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/asozialesnetzwerk/hangman_solver"
description = "Solves hangman puzzles"
license-file = "LICENSE"
include = [
    "build.rs",
    "src/*",
    "words/*.txt",
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
]
build = "build.rs"

[features]
default = []

[profile.release]
codegen-units = 1
panic = "abort"
strip = true
lto = true

[[bin]]
name = "hangman_solver"

[lib]
name = "hangman_solver"
crate-type = ["cdylib"]

[dependencies]
cfg-if = { version = "1.0.0", features = [] }
counter = "0.5.7"
itertools = { version = "0.12.0", features = [] }
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3", "abi3-py310"], optional = true }
# 0.3.0 has a new feature that I don't like
terminal_size = "0.2.6"

[build-dependencies]
itertools = { version = "0.12.0", features = [] }
Inflector = "0.11.4"
