[package]
name = "hangman_solver"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/asozialesnetzwerk/hangman_solver"
description = "Solves hangman puzzles"
license-file = "LICENSE"
include = [
    "build.rs",
    "src/*",
    "words/*.txt",
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
]
build = "build.rs"

[features]
default = []

[profile.release]
codegen-units = 1
panic = "abort"
strip = true
lto = true

[profile.profile]
inherits = "release"
strip = false
lto = false
debug = 1

[[bin]]
name = "hangman_solver"

[lib]
name = "hangman_solver_lib"
crate-type = ["cdylib"]

[dependencies]
cfg-if = { version = "1.0.0", features = [] }
counter = "0.5.7"
itertools = { version = "0.12.0", features = [] }
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3", "abi3-py310"], optional = true }
terminal_size = "0.3.0"

[build-dependencies]
itertools = { version = "0.12.0", features = [] }
Inflector = "0.11.4"
