[package]
name = "hangman_solver"
version = "0.6.9"
edition = "2024"
repository = "https://github.com/asozialesnetzwerk/hangman_solver"
description = "Solves hangman puzzles"
license-file = "LICENSE"
include = [
    "build.rs",
    "src/*",
    "words/*.txt",
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
]
build = "build.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz', '--enable-bulk-memory', '--enable-nontrapping-float-to-int']
[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-Oz', '--enable-bulk-memory', '--enable-nontrapping-float-to-int']
[package.metadata.wasm-pack.profile.profile]
wasm-opt = ['-Oz', '--enable-bulk-memory', '--enable-nontrapping-float-to-int']

[features]
# , "pyo3", "wasm-bindgen"
default = ["terminal_size"]
wasm-bindgen = ["dep:wasm-bindgen", "dep:js-sys"]

[profile.release]
codegen-units = 1
panic = "abort"
strip = true
lto = true
opt-level = 3

[profile.profile]
inherits = "release"
strip = false
lto = false
debug = 1

[[bin]]
name = "hangman_solver"

[lib]
name = "hangman_solver_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
cfg-if = { version = "1.0.0", features = [] }
counter = "0.6.0"
itertools = { version = "0.13.0", features = [] }
pyo3 = { version = "0.25.0", features = [
    "extension-module",
    "abi3",
    "abi3-py312",
    "experimental-inspect",
], optional = true }
terminal_size = { version = "0.4.0", optional = true }
wasm-bindgen = { version = "0.2.95", optional = true }
js-sys = { version = "0.3.77", optional = true }
unwrap-infallible = "0.1.5"


[build-dependencies]
itertools = { version = "0.13.0", features = [] }
Inflector = "0.11.4"
unicode-segmentation = "1.12.0"
easy-parallel = "3.3.1"
