[project]
name = "hangman-solver-rs"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["hangman", "solver", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
compatibility = "manylinux2014"
features = ["pyo3"]
profile = "release"
strip = true
python-source = "python"
module-name = "hangman_solver._solver"

# building wheel with: podman run --rm -v .:/io ghcr.io/pyo3/maturin build --release --manylinux 2014
